2001-06-05  Christian Stimming  <stimming@tuhh.de>

	* src/scm/report/category-barchart.scm, average-balance.scm,
	net-barchart.scm: changed price source default to
	weighted-average.

	* src/scm/prefs.scm: fix string.

	* src/scm/options-utilities.scm: added date interval Quarter, Half
	Year.

	* src/scm/date-utilities.scm: added QuarterDelta, HalfYearDelta

	* po/de.po: Updated German transl

2001-06-05  James LewisMoss  <jimdres@mindspring.com>

	* doc/sgml/C/xacc-gpl.sgml: more cleanups.

	* doc/sgml/C/xacc-locatingtxns.sgml: promote sect3's to sect2's.

	* doc/sgml/C/xacc-gpl.sgml: remove sect1.  cleanup.

	* doc/sgml/C/xacc-print.sgml: wrap content in sect1.

	* doc/sgml/C/xacc-gpl.sgml: remove sect1.  promote rest of
	sections.

	* doc/sgml/C/xacc-y2k.sgml: wrap content in sect1

	* doc/sgml/C/xacc-stock-price-report.sgml: remove section title.

	* doc/sgml/C/xacc-txf-export.sgml: wrap content in sect1.

	* doc/sgml/C/xacc-txf-export-anomalies.sgml: wrap content in
	sect1. 

	* doc/sgml/C/xacc-txf-categories.sgml: wrap content in sect1.

	* doc/sgml/C/xacc-trans-report.sgml: wrap content in sect1.

	* doc/sgml/C/xacc-tax-report.sgml: wrap content in sect1.

	* doc/sgml/C/xacc-reports.sgml: remove sectionness of first section.

	* doc/sgml/C/xacc-regwin-kbd.sgml: wrap content in sect1.

	* doc/sgml/C/xacc-regwin.sgml: remove sectionness of first
	section. 

	* doc/sgml/C/xacc-quickstart.sgml: remove sect1.  promote sect2's
	to sect1's.

	* doc/sgml/C/xacc-qif-import.sgml: remove sect1.  promote sect2's
	and sect3's one up.

	* doc/sgml/C/xacc-print-check.sgml: remove sect1.  promote sect2's
	to sect1's.

	* doc/sgml/C/xacc-portfolio-report.sgml: remove section title.

	* doc/sgml/C/xacc-pnl.sgml: wrap content in sect1.

	* doc/sgml/C/xacc-net-worth-barchart.sgml: remove section title.

	* doc/sgml/C/xacc-multicolumn-view-reports.sgml: remove section
	title. 

	* doc/sgml/C/xacc-mainwin.sgml: wrap content in sect1.
